# Latency-profiler

./: CMakeLists.txt  LICENSE  README.md
scripts/: generate_flamegraph.sh  record.sh  record_perf.sh
src/: cache_bench.hpp  context_bench.hpp  main.cpp  numa_bench.hpp  stats.hpp  syscall_bench.hpp  timer.hpp  utils.hpp
src/benchmarks/cache/: cache_bench.h
src/benchmarks/context/: context_bench.h
src/benchmarks/memory/: memory_bench.h
src/benchmarks/syscall/: syscall_bench.h
src/core/: cpu_affinity.h  stats.h  timer.h
src/platform/linux/: cpu_affinity_linux.cpp  timer_linux.cpp
src/platform/macos/: cpu_affinity_macos.cpp  timer_macos.cpp
src/platform/windows/: cpu_affinity_windows.cpp  timer_windows.cpp
